<resources>
    <string name="app_name">Ear Train</string>
    <string name="action_settings">Settings</string>
    <string name="button_chord">Chord</string>
    <string name="button_interval">Interval</string>
    <string name="button_replication">Replication</string>
    <string name="button_stats">Statistics</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="Repetition_button_text">Interval singing</string>
    <string name="IntervalTraining_button_text">Interval Training</string>
    <string name="ChordTraining_button_text">Chord Training</string>
    <string name="TheoryButton_text">Theory</string>
    <string name="Theory_button_text">Theory</string>
    <string name="statistics_button_text">Statistics</string>
    <string name="play_sound">PLAY SOUND</string>
    <string name="insert_microphone">insert microphone</string>
    <string name="score_placeholder">0/10</string>
    <string name="interval_singing_instruction_default">Sing a minor third</string>
    <string name="interval_singing_instruction">Sing a %1$s %2$s the root note.</string>
    <string name="achievement_1_chad">Chad</string>
    <string name="achievement_2_diamond">Shiney</string>
    <string name="Achievement_headline">Achievements</string>
    <string name="achievement_3_trophy">Trophy</string>
    <string name="intervals">Intervals</string>
    <string name="interval_theory">An interval is the distance between two notes. There are two types of intervals: harmonic and melodic. Harmonic intervals occur when two notes are played at the same time, whereas melodic intervals are spaced out. Melodic intervals can be either ascending, with the second note being higher than the first, or descending, where the second note is lower.</string>
    <string name="naming_intervals">Naming intervals</string>
    <string name="naming_intervals_theory">Intervals can be identified by the amount of half-steps it consists of. Essentially, a half-step is how many keys on the piano we have to move to play the interval. When we name intervals, however, we base the name on how many white keys we move. Playing a C and an E on a piano requires us to move four keys, but only three white keys. Thus we move four half-steps, and the interval is called a major third.</string>
    <string name="major_or_minor">Major or minor?</string>
    <string name="chords">Chords</string>
    <string name="chords_theory">Chords are simply three or more notes played at the same time. If the notes are spaced out it’s called an arpeggio, but they are still considered chords for our purposes.’</string>
    <string name="triads_theory">Triads are chords consisting of three notes. The most basic chords are the major and minor chords. Start on any root note and play a major third and a perfect fifth, and you have a major chord. Replace the major third with a minor third and you have a minor chord. Replace the perfect fifth with an augmented fifth instead and you have an augmented chord. Replace the perfect fifth in a minor chord with a diminished fifth, and you have a diminished chord. As you can see, the chord names are based on the intervals within the chord, and figuring out the notes of unknown chords thus becomes intuitive once you know the naming system.</string>
    <string name="triads">Triads</string>
    <string name="bigger_chords">Bigger chords</string>
    <string name="bigger_chords_theory">Chords beyond our basic triads are basically just a triad with some added notes. A C7, is a C major chord with an added minor seventh, a Cmaj7 is a C major chord with an adden major seventh, and a Cmin7 is a C minor chord with an added minor seventh, and so on and so on.</string>
    <string name="exercise_title_placeholder">Exercise Title</string>
    <string name="exercise_description_placeholder">Time to get those ears worked out!</string>
    <string name="best_score">Best score</string>
    <string name="start">Start</string>
    <string name="txt_success_placeholder">9/10</string>
    <string name="txt_score_placeholder">1337</string>
    <string name="txt_time_placeholder">69.69s</string>
    <string name="btn_comp_text">Competitive</string>
    <string name="title_activity_comp">CompActivity</string>
    <string name="comp_act_Title">Choose Mode</string>
    <string name="achv_mountain">Climber</string>
    <string name="achievment_4_rocket">Launch</string>
    <string name="achievment_5_bag">Spender</string>
</resources>
