<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



<android.support.constraint.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".StatisticActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="87dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/achivement_circle"
        android:foreground="@drawable/weight"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="91dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/achievement_1_chad"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="83dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/achivement_circle"
        android:foreground="@drawable/diamond"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="141dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:text="@string/achievement_2_diamond"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="64dp"
        android:text="@string/Achievement_headline"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linechart" />

    <Button
        android:id="@+id/button3"
        android:layout_width="101dp"
        android:layout_height="81dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/achivement_circle"
        android:foreground="@drawable/trophy"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/achievement_3_trophy"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</android.support.constraint.ConstraintLayout>


</ScrollView>